<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_transaction_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentAddTransaction">

    <TextView
        android:id="@+id/text_view_add_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="130dp"
        android:padding="20dp"
        android:text="@string/add_transaction"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_rakam"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="160dp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGrpNaameJama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checkedButton="@id/radioBtnNaame"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_rakam">

        <RadioButton
        android:id="@+id/radioBtnNaame"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/naame"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="429dp" />

        <RadioButton
            android:id="@+id/radioBtnJama"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/jama"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="247dp" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="number"
        android:hint="@string/amount"
        android:inputType="number"
        android:padding="12dp"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/editTextIr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGrpNaameJama" />

    <EditText
        android:id="@+id/editTextIr"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:autofillHints="number"
        android:hint="@string/ir"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toEndOf="@+id/editTextAmount"
        app:layout_constraintTop_toBottomOf="@+id/radioGrpNaameJama" />

    <EditText
        android:id="@+id/editTextRemarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:selectAllOnFocus="true"
        android:padding="12dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:autofillHints="postalAddress"
        android:inputType="textAutoComplete"
        android:hint="@string/remarks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount" />

    <Button
        android:id="@+id/add_transaction_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="152dp"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint = "@string/date"
        android:ems="10"
        android:selectAllOnFocus="true"
        android:inputType="date"
        android:autofillHints="date"
        android:padding="12dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRemarks" />

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:drawableLeft="@drawable/baseline_calendar_month_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextRemarks" />


</androidx.constraintlayout.widget.ConstraintLayout>