<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentHome">

    <TextView
        android:id="@+id/tvRakamInLoss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_tv_rakaminloss"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSilverRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="Silver Rate"
        android:background="@drawable/edit_text_bkg"
        android:hint="@string/home_et_silver_rate"
        android:inputType="number"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/btnShowRakamInLoss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRakamInLoss" />

    <Button
        android:id="@+id/btnShowRakamInLoss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/home_btn_showrakaminloss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etSilverRate"
        app:layout_constraintTop_toBottomOf="@+id/tvRakamInLoss" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShowRakamInLoss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShowRakamInLoss" />

</androidx.constraintlayout.widget.ConstraintLayout>