<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_rakam_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentAddRakam">

    <TextView
        android:id="@+id/text_view_add_rakam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:padding="20dp"
        android:text="@string/add_rakam"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:padding="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rakam_type"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="228dp"
        android:hint="@string/rakam_type"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:background="@drawable/edit_text_bkg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rakam_weight"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="288dp"
        android:hint="@string/rakam_weight"
        android:autofillHints="number"
        android:inputType="number"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:background="@drawable/edit_text_bkg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_rakam_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="178dp"
        android:text="@string/add_rakam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rakam_weight" />

</androidx.constraintlayout.widget.ConstraintLayout>