<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutTransactionSearchResults"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRakamSearch">

    <TextView
        android:id="@+id/textViewTransactionSearchFragmentCustDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTransactionSearchFragmentMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewTransactionSearchFragmentAadharNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTransactionSearchFragmentCustDetails" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewTransactionSearchFragmentAadharNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewTransactionSearchFragmentMobileNumber"
        app:layout_constraintTop_toBottomOf="@+id/textViewTransactionSearchFragmentCustDetails" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewTransactionSearchFragmentRakamDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTransactionSearchFragmentMobileNumber" />

    <Button
        android:id="@+id/btnDeleteRakam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/tranSearchDeleteRakam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTransactionSearchFragmentRakamDetails" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTransactionSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCalculateTotalBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeleteRakam" />

    <Button
        android:id="@+id/buttonCalculateTotalBalance"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/calculate_amount"
        app:layout_constraintEnd_toStartOf="@+id/btnAddTransaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewTransactionSearch" />

    <Button
        android:id="@+id/btnAddTransaction"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/add_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCalculateTotalBalance"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewTransactionSearch" />

    <TextView
        android:id="@+id/calculatedAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculateTotalBalance" />
</androidx.constraintlayout.widget.ConstraintLayout>